# aris

./: .env.ci  .env.example  .gitignore  .prettierignore  .prettierrc  .prettierrc.shared.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  eslint.config.shared.js  fix_commit_emails.sh  fix_tree_sitter_rsm.sh  justfile  netlify.toml
.claude/: settings.json
.claude/commands/: breakdown-to-tasks.md  ci-report.md  prd.md  tdd.md
.claude/prds/: prd-publish-drafts-with-public-permalink.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  contributor-checklist.md  feature_request.yml
.github/scripts/: run-e2e-tests.sh  wait-for-servers.sh
.github/workflows/: ci-old.yml  ci.yml  ci.yml.backup
backend/: .dockerignore  .env.ci  .env.example  .gitignore  .prettierrc  AI_SETUP.md  Dockerfile  README.md  alembic.ini  fly.toml  main.py  pyproject.toml  simulate-ci.example
backend/alembic/: env.py
backend/alembic/versions/: 116a29539154_add_filesetting_table.py  14808df09e7d_add_email_tracking_fields_to_signup_.py  2775640c593a_fix_utc_timestamps.py  32f6d03660bb_add_fileasset_table.py  358cb873fb7e_add_annotation_model.py  369a8fbaa6f0_add_signup_table.py  404696bbbd65_support_default_file_settings.py  59878b55c0bc_add_version_and_prev_version_id_fields_.py  6e5744b33158_initial_migration.py  7b34401c55b7_merge_branches.py  8927a9754c0b_add_user_settings_table.py  9fe3d6fca545_add_unsubscribe_token_and_unsubscribed_.py  a8bcc7a54da2_initial_schema.py  daf48d360ee5_update_signup_table_for_frontend_form_.py  f16cfc973685_add_user_affiliation_and_email_.py  fcc9ed287b43_add_publication_status_fields_to_file_.py  remove_publication_fields.py
backend/aris/: __init__.py  config.py  deps.py  exceptions.py  health.py  jwt.py  logging_config.py  security.py
backend/aris/crud/: __init__.py  document.py  file.py  file_assets.py  file_settings.py  render.py  signup.py  tag.py  user.py  user_settings.py  utils.py
backend/aris/models/: __init__.py  copilot.py  mock_data.py  models.py
backend/aris/routes/: __init__.py  auth.py  copilot.py  document.py  file.py  file_annotations.py  file_assets.py  file_settings.py  public.py  render.py  signup.py  tag.py  user.py  user_settings.py
backend/aris/services/: asset_resolver.py  citation.py  email.py  metadata.py  preprint.py  static_html.py
backend/aris/services/copilot/: __init__.py  anthropic_provider.py  factory.py  interface.py  mock_provider.py  openai_provider.py  service.py
backend/aris/services/file_service/: __init__.py  interface.py  memory_service.py  models.py
backend/scripts/: add_example_data.py  add_mock_data.py  reset_test_user.py  sync_columns.py
backend/tests/: conftest.py  test_artifact_testing.py  test_auth_disabled.py  test_citation_metadata.py  test_config.py  test_design_assets.py  test_design_assets_integration.py  test_jwt.py  test_security.py
backend/tests/integration/: README.md  __init__.py  test_database_constraints.py  test_epic_public_access_integration.py  test_public_access_integration.py  test_publication_status_integration.py  test_rsm_error_handling.py  test_rsm_integration.py
backend/tests/test_crud/: test_crud_file.py  test_crud_file_assets.py  test_crud_file_settings.py  test_crud_signup.py  test_crud_tag.py  test_crud_user.py  test_file_asset_validators.py  test_render_utils.py  test_tag.py  test_utils.py
backend/tests/test_integration/: test_citation_architecture.py
backend/tests/test_models/: test_mock_data.py  test_models.py  test_models_signup.py
backend/tests/test_routes/: test_auth.py  test_file.py  test_file_assets.py  test_file_settings.py  test_render_private.py  test_routes_auth.py  test_routes_copilot.py  test_routes_file.py  test_routes_file_assets.py  test_routes_file_settings.py  test_routes_health.py  test_routes_public.py  test_routes_render.py  test_routes_signup.py  test_routes_tag.py  test_routes_user.py  test_tag.py  test_user.py
backend/tests/test_services/: test_asset_resolver.py  test_citation.py  test_copilot_service.py  test_email.py  test_file_service.py  test_file_service_routes.py  test_preprint_crud.py  test_public_crud_refactor.py  test_public_refactor.py  test_static_html_refactor.py
design-assets/css/: variables.css
docker/: .env.example  README.md  docker-compose.dev.yml  env-check.js
docker/backend/: Dockerfile.dev  create_postgres_user.sql  docker-entrypoint.sh  init_test_db.sql  seed_user.sql
docker/docs/: troubleshooting.md
docker/frontend/: Dockerfile.dev
docker/scripts/: setup-clone.sh
docker/shared/: Dockerfile.base
docker/site/: Dockerfile.dev
docs/: ari-design.md  peer-review-preprint-mvp.md
frontend/: .env.example  .eslintrc.js  .gitignore  .prettierrc  COMPONENT_DOCS_TEMPLATE.md  Dockerfile.dev  README.md  aris_backup_20250713_220110.sql  e2e-test-plan.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.browser.config.js
frontend/.storybook/: main.js  preview.js
frontend/debug/: README.md  debug-bug-template.js
frontend/src/: App.vue  File.js  FileStore.js  main.js  router.js
scripts/: ci-backend-diagnosis-step.yml  debug-auth-failure.sh  debug-password-hash.py  diagnose-backend-ci.sh  get-ci-data.sh  run-backend-diagnosis.sh  start-dev.sh
server/: main.py  pyproject.toml
server/aris/: __init__.py
server/scripts/: add_mock_data.py  init_db.py
site/: .env.example  .prettierrc  MARKETING_SITE_REQUIREMENTS.md  README.md  app.vue  design_brief.md  error.vue  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  playwright-global-setup.js  playwright.config.js  test-menu-toggle.js  vitest.config.js
site/assets/: components.css  main.css
site/components/: AppFooter.vue  AppNavbar.vue  DarkModeToggle.vue  Footer.vue  Logo.vue  NavBar.vue  (+1 more)
web/: .gitignore
(+736 files in other folders)
