[project]
name = "aris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.11",
    "lxml>=5.3.2",
    "psycopg2-binary>=2.9.10",
    "rsm-markup>=0.3",
    "sqlalchemy>=2.0.39",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "python-jose[cryptography]>=3.4.0",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.1",
    "bcrypt>=4.3.0",
    "python-dotenv>=1.1.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
    "pytest-postgresql>=7.0.2",
    "aiosqlite>=0.21.0",
    "pytest-xdist>=3.7.0",
]

[dependency-groups]
test = [
    "pillow>=11.2.1",
    "pytest-cov>=6.1.1",
]

[tool.setuptools]
package-dir = {"" = "."}


[tool.ruff]
extend-select = ["I"]    # Enable import sorting
line-length = 100


[tool.pylsp.plugins.pycodestyle]
max_line_length = 100


[tool.pylsp.plugins.flake8]
enabled = false


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:fs",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abc.abstractmethod",
    "raise NotImplementedError"
]
show_missing = true
